--- a/World_Population.ipynb
+++ b/World_Population.ipynb
@@ -9,8 +9,6 @@
         "IdrDuwUtbctW",
         "nA2zAn5ZDmXL",
         "pzU8wd8eO5JZ",
-        "5CRncCaHa67k",
-        "wBTnDWCXZrcs",
         "Qlyq0NP4sH1U",
         "R5OsV3BAsvke",
         "FVy65pYHPnWD",
@@ -19,7 +17,7 @@
         "tDFnISTkKtEb",
         "AcIFcLDqlGpW"
       ],
-      "authorship_tag": "ABX9TyNItSIDzl3OCeu5dTwcLBcP",
+      "authorship_tag": "ABX9TyMzOe1oH7W2n0BAVAYKHDZl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +81,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Mount Google Drive"
+        "**Mount Google Drive**"
       ],
       "metadata": {
         "id": "SsoZAeUea608"
@@ -116,7 +114,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Reading the csv file using pandas"
+        "**Reading the csv file using pandas**"
       ],
       "metadata": {
         "id": "kL4R6G32bHRw"
@@ -985,7 +983,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Finding number of **numeric columns** to work on"
+        "**Finding number of numeric columns to work on**"
       ],
       "metadata": {
         "id": "ZUkCM8SsYtFp"
@@ -1020,7 +1018,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Finding out **Missing Values**"
+        "**Finding out Missing Values**"
       ],
       "metadata": {
         "id": "Ft3xYHNbQeVk"
@@ -1226,7 +1224,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Total World Population in different years"
+        "**Total World Population in different years**"
       ],
       "metadata": {
         "id": "VuOr6jcaseoO"
@@ -1255,7 +1253,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Grapical Representation"
+        "**Grapical Representation**"
       ],
       "metadata": {
         "id": "KG9tbz982Z5v"
@@ -1305,7 +1303,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Growth Percentage Analysis"
+        "**Growth Percentage Analysis**"
       ],
       "metadata": {
         "id": "DKBs58hB2fN7"
@@ -1381,7 +1379,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Graphical Representation"
+        "**Graphical Representation**"
       ],
       "metadata": {
         "id": "ARS6CIwV4ggD"
@@ -1429,7 +1427,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Top 5 Countries with Highest Growth Rate"
+        "**Top 5 Countries with Highest Growth Rate**"
       ],
       "metadata": {
         "id": "_iyE8qVY6UFD"
@@ -1473,7 +1471,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Countries having Growth Rate below 1"
+        "**Countries having Growth Rate below 1**"
       ],
       "metadata": {
         "id": "zWtdG5x1TT71"
@@ -1575,7 +1573,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Top 5 Countries with Least Growth Rate"
+        "**Top 5 Countries with Least Growth Rate**"
       ],
       "metadata": {
         "id": "Q7_uMYMyR5Ym"
@@ -1652,7 +1650,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Graphical Representation"
+        "**Graphical Representation**"
       ],
       "metadata": {
         "id": "h5tn_XEDQX8l"
@@ -1699,7 +1697,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Top 5 Countries with Highest Population Density"
+        "**Top 5 Countries with Highest Population Density**"
       ],
       "metadata": {
         "id": "p2NDu73PRAOF"
@@ -1743,7 +1741,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Top 5 Countries with Least Population Density"
+        "**Top 5 Countries with Least Population Density**"
       ],
       "metadata": {
         "id": "J2c2lw8CSCMz"
