--- a/World_Population.ipynb
+++ b/World_Population.ipynb
@@ -16,7 +16,7 @@
         "tDFnISTkKtEb",
         "v6K53YyCLQF-"
       ],
-      "authorship_tag": "ABX9TyOhqnl6Vxz+56UMBN6w+Qtx",
+      "authorship_tag": "ABX9TyM/Re4iGg8S/HpoFdVUYYGf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2265,7 +2265,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####**India Vs China Future Population Prediction**"
+        "####**India Vs China Population Prediction**"
       ],
       "metadata": {
         "id": "F3_SG0cZy8vd"
