--- a/World_Population.ipynb
+++ b/World_Population.ipynb
@@ -6,7 +6,6 @@
       "provenance": [],
       "collapsed_sections": [
         "Hg6eR1UuTw7a",
-        "IdrDuwUtbctW",
         "nA2zAn5ZDmXL",
         "pzU8wd8eO5JZ",
         "Qlyq0NP4sH1U",
@@ -16,7 +15,7 @@
         "tDFnISTkKtEb",
         "v6K53YyCLQF-"
       ],
-      "authorship_tag": "ABX9TyM/Re4iGg8S/HpoFdVUYYGf",
+      "authorship_tag": "ABX9TyNG8E+fnbLqpgLrEUzH49Zg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -959,6 +958,8 @@
         "6.   Which 5 countries are highly populous?\n",
         "7.   Which 5 countries are scarcely populous?\n",
         "8.   Which 5 countries have high population density?\n",
+        "9.   When will India overtake China in Population terms?\n",
+        "10.  How would the population growth of India and China be in future? \n",
         "\n",
         "\n",
         "---\n",
